Added href for Montserrat font
New google font added

--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Little Angels Learning Center</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 	<h1>Little Angels Learning Center</h1>
