Updated html with content and structure
revised structure and added all sections.

--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -6,7 +6,86 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-	<h1>Little Angels Learning Center</h1>
-	<p>This is the in-home learning center of Kelley Luckett.</p>
+	<!-- HEADER -->
+	<header>
+		<ul>
+			<li><a href="mailto:mskelley@littleangelslearningcenter.com">Email Us</a></li> |
+			<li><a href="#">211 Rebecca Drive, Winchester, VA 22602</a></li> |
+			<li><a href="#">540.486.4828</a></li> 
+		</ul>
+		<img src="#" alt="Little Angels Learning Center Logo">
+		<nav>
+  			<a href="#">Mission, Vision, Values</a> |
+  			<a href="#">Our Curriculum</a> |
+  			<a href="#">For Parents</a> |
+  			<a href="#">Join Us</a>
+		</nav>
+	</header>
+
+	<!-- HERO -->
+	<section>
+		<h1>Focus on Teaching &amp; Faith</h1>
+		<q>&quot;Let the little children come to me.&quot;<br>
+		Luke 18&#59;16</q>
+		<img src="#" alt="hero banner">
+	</section>
+
+	<!-- MISSION & FEATURES -->
+	<section>
+		<article>
+			<h2>Mission &amp; Vision</h2>
+			<p>It is our mission to focus on the individuality and uniqueness of each child we are priveleged to teach. We understand that your child has a special place in this world and we welcome the opportunity of sharing their journey to success.</p>
+			<button>Learn More</button>
+		</article>
+		<article>
+			<h2>Key Features</h2>
+			<ul>
+				<li>Virginia State Licensed</li>
+				<li>CPR &amp; First Aid Certified</li>
+				<li>Christian Faith Based</li>
+				<li>Live Video Streaming Available</li>
+				<li>Before &amp; After School Care Available</li>
+				<li>Part-time Care Available Upon Request*</li>
+				<li>Meals &amp; Snacks Provided**</li>
+			</ul>
+			<small>*Part-time care is available at an hourly rate and requires proper notification. See rate details.<br>**Nutritional breakfast and lunch provided, along with 2 snacks during the day, unless othewise contracted.</small>
+		</article>>
+	</section>
+
+	<!-- HOURS, RATES, CORE EDUCATIONAL VALUES -->
+	<section>
+		<article>
+			<h2>Hours</h2>
+			<p>Open Monday&#8211;Friday<br>
+			6&#59;00 a.m. to 6&#59;00 p.m.<br>
+			All Frederick County Public School Holidays Observed.</p>
+			<h2>Rates</h2>
+			<ul>
+				<li>0&#59;12 Months Full-time&#58; $200 weekly</li>
+				<li>13&#59;48 Months Full-time&#58; $175 weekly</li>
+				<li>0-48 months Part-time&#58; $14/hour</li>
+			</ul>
+			<button>Learn More</button>
+		</article>
+		<article>
+			<h2>Core Educational Values</h2>
+			<ul>
+				<li><a href="#">Focus on Developmental Milestones</a></li>
+				<li><a href="#">Hands on Learning Activities</a></li>
+				<li><a href="#">Early Literacy Program</a></li>
+				<li><a href="#">Encourage Creative &amp; Independent Thinking</a></li>
+			</ul>
+		</article>
+	</section>
+	<footer>
+		<ul>
+			<li>&copy;2016 Little Angels Learning Center, LLC. All rights reserved.</li>
+			<li>Privacy Policy</li>
+			<li>Terms</li>
+		</ul>
+		<ul>
+			<li><img src="#" alt="Facebook"></li>
+		</ul>
+	</footer>
 </body>
 </html>
