--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -77,6 +77,8 @@
 			</ul>
 		</article>
 	</section>
+	
+	<!-- FOOTER -->
 	<footer>
 		<ul>
 			<li>&copy;2016 Little Angels Learning Center, LLC. All rights reserved.</li>
