--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -25,8 +25,7 @@
 	<!-- HERO -->
 	<section>
 		<h1>Focus on Teaching &amp; Faith</h1>
-		<q>&quot;Let the little children come to me.&quot;<br>
-		Luke 18&#59;16</q>
+		<p><q>Let the little children come to me.</q>Luke 18&#59;16</p>
 		<img src="#" alt="hero banner">
 	</section>
 
@@ -49,7 +48,7 @@
 				<li>Meals &amp; Snacks Provided**</li>
 			</ul>
 			<small>*Part-time care is available at an hourly rate and requires proper notification. See rate details.<br>**Nutritional breakfast and lunch provided, along with 2 snacks during the day, unless othewise contracted.</small>
-		</article>>
+		</article>
 	</section>
 
 	<!-- HOURS, RATES, CORE EDUCATIONAL VALUES -->
@@ -57,13 +56,13 @@
 		<article>
 			<h2>Hours</h2>
 			<p>Open Monday&#8211;Friday<br>
-			6&#59;00 a.m. to 6&#59;00 p.m.<br>
+			6&#58;00 a.m. to 6&#58;00 p.m.<br>
 			All Frederick County Public School Holidays Observed.</p>
 			<h2>Rates</h2>
 			<ul>
-				<li>0&#59;12 Months Full-time&#58; $200 weekly</li>
-				<li>13&#59;48 Months Full-time&#58; $175 weekly</li>
-				<li>0-48 months Part-time&#58; $14/hour</li>
+				<li>0&#8211;12 Months Full-time&#58; $200 weekly</li>
+				<li>13&#8211;48 Months Full-time&#58; $175 weekly</li>
+				<li>0&#8211;48 months Part-time&#58; $14/hour</li>
 			</ul>
 			<button>Learn More</button>
 		</article>
@@ -77,16 +76,16 @@
 			</ul>
 		</article>
 	</section>
-	
+
 	<!-- FOOTER -->
 	<footer>
 		<ul>
 			<li>&copy;2016 Little Angels Learning Center, LLC. All rights reserved.</li>
-			<li>Privacy Policy</li>
-			<li>Terms</li>
+			<li><a href="#">Privacy Policy</a></li>
+			<li><a href="#">Terms</a></li>
 		</ul>
 		<ul>
-			<li><img src="#" alt="Facebook"></li>
+			<li><a href="#"><img src="#" alt="Facebook"></a></li>
 		</ul>
 	</footer>
 </body>
