added title tags
title tavs

--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -13,7 +13,7 @@
 			<li><a href="#">211 Rebecca Drive, Winchester, VA 22602</a></li> |
 			<li><a href="#">540.486.4828</a></li> 
 		</ul>
-		<img src="#" alt="Little Angels Learning Center Logo">
+		<img src="#" alt="Little Angels Learning Center" title="logo">
 		<nav>
   			<a href="#">Mission, Vision, Values</a> |
   			<a href="#">Our Curriculum</a> |
@@ -26,7 +26,7 @@
 	<section>
 		<h1>Focus on Teaching &amp; Faith</h1>
 		<p><q>Let the little children come to me.</q>Luke 18&#58;16</p>
-		<img src="#" alt="hero banner">
+		<img src="#" alt="hero banner" title="#">
 	</section>
 
 	<!-- MISSION & FEATURES -->
@@ -85,7 +85,7 @@
 			<li><a href="#">Terms</a></li>
 		</ul>
 		<ul>
-			<li><a href="#"><img src="#" alt="Facebook"></a></li>
+			<li><a href="#"><img src="#" alt="Facebook" title="#"></a></li>
 		</ul>
 	</footer>
 </body>
