updated image url
image url wrong

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -13,7 +13,7 @@
 			<li><a href="#">211 Rebecca Drive, Winchester, VA 22602</a></li> |
 			<li><a href="#">540.486.4828</a></li> 
 		</ul>
-		<img src="/images/logo.jpg" alt="Little Angels Learning Center with halo" title="Little Angels Learning Center logo">
+		<img src="images/logo.jpg" alt="Little Angels Learning Center with halo" title="Little Angels Learning Center logo">
 		<nav>
   			<a href="#">Mission, Vision, Values</a> |
   			<a href="#">Our Curriculum</a> |
@@ -26,7 +26,7 @@
 	<section>
 		<h1>Focus on Teaching &amp; Faith</h1>
 		<p id="slogan"><q>Let the little children come to me.</q>Luke 18&#58;16</p>
-		<img src="/images/parachute.jpg" alt="hero banner" title="#">
+		<img src="images/parachute.jpg" alt="hero banner" title="#">
 	</section>
 
 	<!-- MISSION & FEATURES -->
