--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -8,7 +8,7 @@
 <body>
 	<!-- HEADER -->
 	<header>
-		<ul>
+		<ul class="secondary-nav">
 			<li><a href="mailto:mskelley@littleangelslearningcenter.com">Email Us</a></li> |
 			<li><a href="#">211 Rebecca Drive, Winchester, VA 22602</a></li> |
 			<li><a href="#">540.486.4828</a></li> 
