Revised the content to be for web ninja instead of little angels learning center

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -1,91 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Little Angels Learning Center</title>
+	<title>Web Ninja&#58; Cleaning up the web, for the sake of humanity.</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 	<!-- HEADER -->
 	<header>
-		<ul id="secondary-nav">
-			<li><a href="mailto:mskelley@littleangelslearningcenter.com">Email Us</a></li> |
-			<li><a href="#">211 Rebecca Drive, Winchester, VA 22602</a></li> |
-			<li><a href="#">540.486.4828</a></li> 
-		</ul>
-		<img src="/unit-3/images/logo.jpg" alt="Little Angels Learning Center with halo" title="Little Angels Learning Center logo">
+		<section>
+			<img src="/unit-3/images/web-ninja.png" alt="web ninja logo" title="index.html">
+		</section>
 		<nav>
-  			<a href="#">Mission, Vision, Values</a> |
-  			<a href="#">Our Curriculum</a> |
-  			<a href="#">For Parents</a> |
-  			<a href="#">Join Us</a>
+  			<a href="#">About</a> |
+  			<a href="#">Recent Work</a> |
+  			<a href="#">Get in Touch</a> |
 		</nav>
 	</header>
 
 	<!-- HERO -->
 	<section>
-		<h1>Focus on Teaching &amp; Faith</h1>
-		<p id="slogan"><q>Let the little children come to me.</q>Luke 18&#58;16</p>
-		<img src="/unit-3/images/parachute.jpg" alt="hero banner" title="#">
+		<img src="/unit-3/images/hero-banner.png" alt="web ninja logo on a mac hero banner" title="#">
 	</section>
 
 	<!-- MISSION & FEATURES -->
 	<section>
 		<article>
-			<h2>Mission &amp; Vision</h2>
-			<p>It is our mission to focus on the individuality and uniqueness of each child we are priveleged to teach. We understand that your child has a special place in this world and we welcome the opportunity of sharing their journey to success.</p>
+			<h1>About this Web Ninja</h1>
+			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit. Nullam things velit, da bomb volutpizzle, suscipizzle quizzle, gravida vizzle, sheezy. Pellentesque sheezy tortizzle. Yo mamma erizzle. Daahng dawg izzle own yo' get down get down check out this pot shit. Maurizzle pellentesque nibh et turpizzle. Dizzle for sure sheezy. Pellentesque fo shizzle rhoncizzle crackalackin. In hac fo shizzle platea bling bling. Fizzle dapibus. Curabitur tellus urna, pretium eu, mattizzle ac, tellivizzle vitae, nunc. Shut the shizzle up suscipizzle. Fo shizzle mah nizzle fo rizzle, mah home g-dizzle black velit sizzle purus.</p>
 			<button>Learn More</button>
 		</article>
-		<article>
-			<h2>Key Features</h2>
-			<ul>
-				<li>Virginia State Licensed</li>
-				<li>CPR &amp; First Aid Certified</li>
-				<li>Christian Faith Based</li>
-				<li>Live Video Streaming Available</li>
-				<li>Before &amp; After School Care Available</li>
-				<li>Part-time Care Available Upon Request*</li>
-				<li>Meals &amp; Snacks Provided**</li>
-			</ul>
-			<small>*Part-time care is available at an hourly rate and requires proper notification. See rate details.<br>**Nutritional breakfast and lunch provided, along with 2 snacks during the day, unless othewise contracted.</small>
-		</article>
+		<aside>
+			<img src="/unit-3/images/headshot.jpg" alt="Jaimi Luckett headshot" title="#">
+		</aside>
 	</section>
 
 	<!-- HOURS, RATES, CORE EDUCATIONAL VALUES -->
 	<section>
+		<h2>Web Ninja Skills</h2>
 		<article>
-			<h2>Hours</h2>
-			<p>Open Monday&#8211;Friday<br>
-			6&#58;00 a.m. to 6&#58;00 p.m.<br>
-			All Frederick County Public School Holidays Observed.</p>
-			<h2>Rates</h2>
-			<ul>
-				<li>0&#8211;12 Months Full-time&#58; $200 weekly</li>
-				<li>13&#8211;48 Months Full-time&#58; $175 weekly</li>
-				<li>0&#8211;48 months Part-time&#58; $14/hour</li>
-			</ul>
-			<button>Learn More</button>
+			<h2>Content Strategy</h2>
+			<img src="/unit-3/images/content-strategy.jpg" alt="Paths for content strategy" title="#">
+			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
 		</article>
 		<article>
-			<h2>Core Educational Values</h2>
-			<ul>
-				<li><a href="#">Focus on Developmental Milestones</a></li>
-				<li><a href="#">Hands on Learning Activities</a></li>
-				<li><a href="#">Early Literacy Program</a></li>
-				<li><a href="#">Encourage Creative &amp; Independent Thinking</a></li>
-			</ul>
+			<h2>Web Development</h2>
+			<img src="/unit-3/images/web-development.jpg" alt="Web Development" title="#">
+			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
+		</article>
+		<article>
+			<h2>Editing</h2>
+			<img src="/unit-3/images/editing.jpg" alt="editing example" title="#">
+			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
 		</article>
 	</section>
 
 	<!-- FOOTER -->
 	<footer>
 		<ul>
-			<li>&copy;2016 Little Angels Learning Center, LLC. All rights reserved.</li>
+			<li>&copy;2016 Web Ninja. All rights reserved.</li>
 			<li><a href="#">Privacy Policy</a></li>
 			<li><a href="#">Terms</a></li>
 		</ul>
 		<ul>
-			<li><a href="#"><img src="#" alt="Facebook" title="#"></a></li>
+			<li><a href="#"><img src="/unit-3/images/facebook.png" alt="Facebook" title="#"></a></li>
 		</ul>
 	</footer>
 </body>
