--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -8,51 +8,47 @@
 <body>
 	<!-- HEADER -->
 	<header>
-		<section>
-			<img src="/unit-3/images/web-ninja.png" alt="web ninja logo" title="index.html">
-		</section>
+		<a href="#"><img src="images/web-ninja.png" alt="web ninja logo"></a>
 		<nav>
   			<a href="#">About</a> |
   			<a href="#">Recent Work</a> |
-  			<a href="#">Get in Touch</a> |
+  			<a href="#">Get in Touch</a>
 		</nav>
 	</header>
-
+	
 	<!-- HERO -->
-	<section>
-		<img src="/unit-3/images/hero-banner.png" alt="web ninja logo on a mac hero banner" title="#">
+	<section id="hero">
+		
 	</section>
 
 	<!-- MISSION & FEATURES -->
-	<section>
-		<article>
+	<section id="about">
+		<div>
 			<h1>About this Web Ninja</h1>
-			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit. Nullam things velit, da bomb volutpizzle, suscipizzle quizzle, gravida vizzle, sheezy. Pellentesque sheezy tortizzle. Yo mamma erizzle. Daahng dawg izzle own yo' get down get down check out this pot shit. Maurizzle pellentesque nibh et turpizzle. Dizzle for sure sheezy. Pellentesque fo shizzle rhoncizzle crackalackin. In hac fo shizzle platea bling bling. Fizzle dapibus. Curabitur tellus urna, pretium eu, mattizzle ac, tellivizzle vitae, nunc. Shut the shizzle up suscipizzle. Fo shizzle mah nizzle fo rizzle, mah home g-dizzle black velit sizzle purus.</p>
-			<button>Learn More</button>
-		</article>
-		<aside>
-			<img src="/unit-3/images/headshot.jpg" alt="Jaimi Luckett headshot" title="#">
-		</aside>
+			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit. Nullam things velit, da bomb volutpizzle, suscipizzle quizzle, gravida vizzle, sheezy. Pellentesque sheezy tortizzle. Yo mamma erizzle. Shut the shizzle up suscipizzle. Fo shizzle mah nizzle fo rizzle, mah home g-dizzle black velit sizzle purus.</p>
+			<a href="#" class="cta">Learn More</a>
+		</div>
+		<img src="images/headshot.jpg" alt="Jaimi Luckett headshot">
 	</section>
 
 	<!-- HOURS, RATES, CORE EDUCATIONAL VALUES -->
-	<section>
+	<section id="skills">
 		<h2>Web Ninja Skills</h2>
-		<article>
-			<h2>Content Strategy</h2>
-			<img src="/unit-3/images/content-strategy.jpg" alt="Paths for content strategy" title="#">
+		<section>
+			<h3>Content Strategy</h3>
+			<img src="images/content-strategy.jpg" alt="Paths for content strategy">
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
-		</article>
-		<article>
-			<h2>Web Development</h2>
-			<img src="/unit-3/images/web-development.jpg" alt="Web Development" title="#">
+		</section>
+		<section>
+			<h3>Web Development</h3>
+			<img src="images/web-development.jpg" alt="Web Development">
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
-		</article>
-		<article>
-			<h2>Editing</h2>
-			<img src="/unit-3/images/editing.jpg" alt="editing example" title="#">
+		</section>
+		<section>
+			<h3>Editing</h3>
+			<img src="images/editing.jpg" alt="editing example">
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
-		</article>
+		</section>
 	</section>
 
 	<!-- FOOTER -->
@@ -63,7 +59,7 @@
 			<li><a href="#">Terms</a></li>
 		</ul>
 		<ul>
-			<li><a href="#"><img src="/unit-3/images/facebook.png" alt="Facebook" title="#"></a></li>
+			<li><a href="#"><img src="images/facebook.png" alt="link to Facebook profile"></a></li>
 		</ul>
 	</footer>
 </body>
