still trying to get containers to float

--- a/unit-6/index.html
+++ b/unit-6/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Web Ninja: Cleaning up the web, for the sake of humanity.</title>
+	<!-- INSERT RESET CSS HERE -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -31,17 +32,17 @@
 	<!-- SKILLS -->
 	<section id="skills">
 		<h2>Web Ninja Skills</h2>
-		<section>
+		<section id="content">
 			<h3>Content Strategy</h3>
 			<img src="images/content-strategy.jpg" alt="Paths for content strategy">
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
 		</section>
-		<section>
+		<section id="development">
 			<h3>Web Development</h3>
 			<img src="images/web-development.jpg" alt="Web Development">
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
 		</section>
-		<section>
+		<section id="editing">
 			<h3>Editing</h3>
 			<img src="images/editing.jpg" alt="editing example">
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit.</p>
