trying to make columns :)

--- a/unit-6/index.html
+++ b/unit-6/index.html
@@ -20,17 +20,17 @@
 		<!--no content as graphic is being styled in css-->
 	</section>
 	<!-- ABOUT -->
-	<section id="about">
-		<div>
+	<section id="about" class="clearfix">
+		<div id="left">
 			<h1>About this Web Ninja</h1>
 			<p>Lorizzle ipsum dolizzle phat amizzle, rizzle adipiscing elit. Nullam things velit, da bomb volutpizzle, suscipizzle quizzle, gravida vizzle, sheezy. Pellentesque sheezy tortizzle. Yo mamma erizzle. Shut the shizzle up suscipizzle. Fo shizzle mah nizzle fo rizzle, mah home g-dizzle black velit sizzle purus.</p>
 			<a href="#" class="cta">Learn More</a>
 		</div>
-		<img src="images/headshot.jpg" alt="Jaimi Luckett headshot">
+		<img id="right" src="images/headshot.jpg" alt="Jaimi Luckett headshot">
 	</section>
 
 	<!-- SKILLS -->
-	<section id="skills">
+	<section id="skills" class="clearfix">
 		<h2>Web Ninja Skills</h2>
 		<section id="content">
 			<h3>Content Strategy</h3>
