added clear fix to footer

--- a/unit-6/index.html
+++ b/unit-6/index.html
@@ -50,7 +50,7 @@
 	</section>
 
 	<!-- FOOTER -->
-	<footer>
+	<footer class="clearfix">
 		<ul>
 			<li>&copy;2016 Web Ninja. All rights reserved.</li>
 			<li><a href="#">Privacy Policy</a></li>
