added css reset

--- a/unit-6/index.html
+++ b/unit-6/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Web Ninja: Cleaning up the web, for the sake of humanity.</title>
 	<!-- INSERT RESET CSS HERE -->
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
