--- a/unit-8/index.html
+++ b/unit-8/index.html
@@ -18,7 +18,7 @@
 		</nav>
 	</header>
 	<!-- HERO -->
-	<section id="hero">
+	<section id="hero" ckass="clearfix">
 		<!--no content as graphic is being styled in css-->
 	</section>
 	<!-- ABOUT -->
